--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <app-person-table *ngIf="!loadingPersonTableData"
-  [persons] ="persons"
+  [persons] ="tableItems"
   (eventDeletePerson) = "onEventDeletePerson($event)"
 >
 </app-person-table>
