--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,15 +1,2 @@
- <div class="container">
-  <button mat-raised-button color="primary"  (click)="onClickAddPerson()">Add Person</button>
-</div> 
-<div *ngIf="loadingPersonTableData" class="loadingData">
-  <mat-spinner >
-    <p>Loading data</p>
-  </mat-spinner>
-  <div style="position:relative; top: -60px; left: 30px;">Loading data</div>
-</div>
-
-<app-person-table *ngIf="!loadingPersonTableData"
-  [persons] ="tableItems"
-  (eventDeletePerson) = "onEventDeletePerson($event)"
->
-</app-person-table>
+<app-mat-toolbar></app-mat-toolbar>
+<app-person-list-new></app-person-list-new>
